Update z-index value in google-sidebar-base.css and add event.stopPropagation() in onClickCollapseElement function in google-sidebar.tsx

--- a/src/background/summary-component/google-sidebar-base.css
+++ b/src/background/summary-component/google-sidebar-base.css
@@ -10,7 +10,7 @@ body.buddy-beep-google-sidebar-show * {
 
 #buddy-beep-google-sidebar {
   position: fixed;
-  z-index: 240;
+  z-index: 2147483645;
   top: 0px;
   right: 0px;
 }
